--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ backtest = [
     "pandas>=2.0",
     "matplotlib>=3.7",
 ]
+deploy = [
+    "boto3>=1.34",
+]
 
 [project.urls]
 Homepage = "https://polymarket.com"
